<resources>
    // Global
    <string name="app_name">Hunter</string>

    // Login - Register
    <string name="login_title">Ingresar</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>

    <string name="login_mail_missing">Debe ingresar su email</string>
    <string name="login_pass_missing">Debe ingresar su password</string>
    <string name="login_bad_credentials">Las credenciales no son correctas</string>

    <string name="logout">Cerrar sesión</string>

    <string name="register_title">Registrarse</string>
    <string name="register_first_name">Nombre</string>
    <string name="register_last_name">Apellido</string>
    <string name="register_alias">Alias</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_password_confirmation">Confirmar Password</string>

    <string name="register_password_not_match">Estas contraseñas no coinciden</string>
    <string name="regiter_error">Error En la regitración</string>

    // Create Game
    <string name="stepClue">Paso 1/4</string>
    <string name="stepLocation">Paso 2/4</string>
    <string name="stepImage">Paso 3/4</string>
    <string name="stepReview">Paso 4/4</string>

    <string name="game_create">Crear Juego</string>
    <string name="upload_image">Galeria</string>
    <string name="take_photo">Camara</string>
    <string name="select_image">Seleccionar una imagen</string>
    <string name="enter_clue">Ingrese una pista</string>
    <string name="enter_image">Agregue una imagen</string>
    <string name="search">Buscar</string>
    <string name="duration">Duración</string>
    <string name="add_players">Agregar jugadores</string>
    <string name="add_location">Agregar ubicación</string>
    <string name="summary">Resumen</string>
    <string name="game_created">Tu juego ha sido creado</string>
    <string name="qr_download">imprime el codigo qr o el codigo para que el ganador finalice el juego</string>
    <string name="download_qr_button">Descargar codigo</string>
    <string name="access_code">El codigo para unirse es: %1$d</string>

    // Game
    <string name="game_join">Unirse a un Juego</string>

    <string name="play">Jugar!</string>
    <string name="game_code">Código de juego</string>
    <string name="game_give_clue">Pista</string>
    <string name="create">Crear</string>
    <string name="ready">Listo</string>


    <string name="upload_image_error">"Error al cargar imagen"</string>
    <string name="go_to_compass">Ir a Brújula</string>

    <string name="choose_game">Elegir Juego</string>

    <string name="enable_gps_text">GPS apagado, querés prenderlo?</string>
    <string name="enable_gps_positive_text">SI</string>
    <string name="enable_gps_negative_text">NO</string>
    <string name="show_clue">Ver Pista!</string>
    <string name="register">Registrarme</string>
    <string name="login">Ingresar</string>
    <string name="default_notification_channel_id">all</string>


    <string name="next">Siguiente</string>
    <string name="previous">Anterior</string>
    <string name="register_alias_helper">"Va a ser tu nickname "</string>
    <string name="register_email_helper">Es para poder identificarte, no vamos a mandarte spam.</string>
    <string name="clue_hint">Pista</string>
    <string name="clue_helper">Esto va a ayudar al jugador a orientarse cuando está cerca</string>
    <string name="home_title">Inicio</string>
    <string name="join_game_title">Unirse a un Juego!</string>
    <string name="map_title">Mapa hacia el Tesoro</string>
    <string name="compass_title">Brújula hacia el Tesoro</string>
    <string name="clue_duration_helper">Esto es en minutos</string>
    <string name="share_game">Compartir Juego</string>
    <string name="game_invitation">"Te invitamos a participar en una nueva búsqueda del tesoro! Unite al juego con este ID: "</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="game_lost">Perdí!</string>
    <string name="history_game">Ver Mis Juegos</string>
    <string name="game_win">Gané!!!</string>
    <string name="historyGame">Historial de Juegos</string>
    <string name="title_activity_scan_q_r">ScanQRActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="scan_qr">Escanear QR</string>
    <string name="compass_distance">Estás a %1$s metros del tesoro</string>
    <string name="game_finished">Juego Terminado</string>

</resources>
