<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/new_game_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginVertical="10dp"
            android:enabled="true"
            android:gravity="center"
            android:text="@string/game_create" />

        <Button
            android:id="@+id/join_game_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginVertical="10dp"
            android:enabled="true"
            android:gravity="center"
            android:text="@string/game_join" />

        <Button
            android:id="@+id/history_game_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginVertical="10dp"
            android:enabled="true"
            android:gravity="center"
            android:text="@string/history_game" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>