<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_weight="0"
        android:text="@string/enter_image"
        android:textAlignment="center"
        android:textSize="@dimen/title"
        />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/imageControls"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/upload_image_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textAlignment="center"
                android:enabled="true"
                android:text="@string/upload_image" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/take_photo_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textAlignment="center"
                android:enabled="true"
                android:text="@string/take_photo" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imagePreview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:layout_margin="5dp"
            android:scaleType="fitCenter"
            android:tag="0"
            android:src="@drawable/magnifying_glass" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/next_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="0"
        android:textAlignment="center"
        android:text="@string/next" />

</androidx.appcompat.widget.LinearLayoutCompat>