<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_weight="0"
        android:text="@string/add_players"
        android:textAlignment="center"
        android:textSize="@dimen/title"
        />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/search_box"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="3"
            android:hint="Buscar jugadores"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/search_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:text="@string/search"
            android:textAlignment="center"
            android:layout_weight="1"
        />
    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/players"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />


    <Button
        android:id="@+id/next_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="0"
        android:textAlignment="center"
        android:text="@string/next" />

</androidx.appcompat.widget.LinearLayoutCompat>